--- a/index.css
+++ b/index.css
@@ -30,3 +30,11 @@ button {
   font-size: 18px;
   border: none;
 }
+
+#direct {
+  position: absolute;
+  bottom: 0;
+  font-size: 25px;
+  border: 3px solid whitesmoke;
+  padding: 3px 0 0 0;
+}
