--- a/index.css
+++ b/index.css
@@ -35,6 +35,6 @@ button {
   position: absolute;
   bottom: 0;
   font-size: 25px;
-  border: 3px solid whitesmoke;
+  border: 3px dotted whitesmoke;
   padding: 3px 0 0 0;
 }
