--- a/index.css
+++ b/index.css
@@ -5,6 +5,7 @@ body {
   color: whitesmoke;
   font-weight: bold;
   text-align: center;
+  font-size: 22px;
 }
 
 h1 {
@@ -37,4 +38,7 @@ button {
   font-size: 25px;
   border: 3px dotted whitesmoke;
   padding: 3px 0 0 0;
+}
+#message {
+  text-decoration: underline;
 }
