--- a/index.css
+++ b/index.css
@@ -34,11 +34,19 @@ button {
 
 #direct {
   position: absolute;
-  bottom: 0;
   font-size: 25px;
   border: 3px dotted whitesmoke;
   padding: 3px 0 0 0;
 }
 #message {
   text-decoration: underline;
+}
+
+#instructions {
+  position: absolute;
+  bottom: 0;
+  left: 665px;
+  font-size: 25px;
+  text-decoration: none;
+  padding: 3px 0 0 0;
 }
