--- a/index.css
+++ b/index.css
@@ -50,3 +50,19 @@ button {
   text-decoration: none;
   padding: 3px 0 0 0;
 }
+
+.container {
+  display: flex;
+  flex-flow: row;
+  justify-content: space-between;
+  margin-left: 200px;
+  margin-top: 30px;
+}
+
+#pcard,
+#dcard {
+  margin-top: 25px;
+  margin-left: 2px;
+  color: red;
+  font-size: 60px;
+}
