updated for deployment testing

--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 body {
   font-family: fantasy;
-  background-image: url('../felt.jpeg');
+  background-image: url('https://res.cloudinary.com/dntpwckqi/image/upload/v1646882343/felt_j50tyx.webp');
   background-size: 100%;
   color: whitesmoke;
   font-weight: bold;
